# PathTracer

./: .gitignore  CMakeLists.txt  premake5.lua
PathTracer/: Intersection.cpp  Intersection.h  Material.h  Options.h  Radiance.cpp  Radiance.h  Ray.h  Scene.cpp  Scene.h
PathTracerCLI/: source.cpp
